--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
       <head>
 	  
        <title>10 ways to DELTARUIN your life</title>
-	   <img src="file:///C:/Users/glowb/Downloads/funny%20site/4c731132b997ee25d570db19db69e346%20(2).png" alt="4c731132b997ee25d570db19db69e346%20(2)" width="atuo" height="auto">
+	   <img src="https://github.com/idonotexisthere/ten-ways-to-deltaRUIN-your-life/blob/bfc5b53e20dc2410cd74603b78d5e54192467eb1/4c731132b997ee25d570db19db69e346%20(2).png" alt="4c731132b997ee25d570db19db69e346%20(2)" width="atuo" height="auto">
 	   <style>
   h1    {
         color: #FF0000;
@@ -36,11 +36,8 @@
  </style>
 
       </head>
-	  <img src="file:///C:/Users/glowb/Downloads/funny%20site/gonerelle2.png"  onclick="playAudio('file:///C:/Users/glowb/Downloads/funny%20site/WEIRD_ROUTE_EARRAPE.wav')">
- 
-...
- 
-<!-- This is not my code, my lazy ass just stole the audio click shit but everything else was coded by me!!! :3 --!>
+	  <img src="https://github.com/idonotexisthere/ten-ways-to-deltaRUIN-your-life/blob/bfc5b53e20dc2410cd74603b78d5e54192467eb1/gonerelle2.png"  onclick="playAudio('https://github.com/idonotexisthere/ten-ways-to-deltaRUIN-your-life/blob/bfc5b53e20dc2410cd74603b78d5e54192467eb1/WEIRD_ROUTE_EARRAPE.wav')">
+
 <script type="text/javascript">
 function playAudio(audioClip) {
     new Audio(audioClip).play();
@@ -48,7 +45,7 @@ function playAudio(audioClip) {
 </script>
       <body>
          <p>#1: Betting on Woody Theory</p>
-		  <img src="file:///C:/Users/glowb/Downloads/funny%20site/friendinsideme.webp" alt="as-long-as-the-chances-are-non-zero-always-bet-on-woody-v0-0fml0ah4gv8f1" width="700" onclick="playAudio('file:///C:/Users/glowb/Downloads/funny%20site/Toby%20Fox%20-%20Friend%20Inside%20Me.mp3')">
+		  <img src="https://github.com/idonotexisthere/ten-ways-to-deltaRUIN-your-life/blob/bfc5b53e20dc2410cd74603b78d5e54192467eb1/friendinsideme.webp" alt="as-long-as-the-chances-are-non-zero-always-bet-on-woody-v0-0fml0ah4gv8f1" width="700" onclick="playAudio(https://github.com/idonotexisthere/ten-ways-to-deltaRUIN-your-life/blob/bfc5b53e20dc2410cd74603b78d5e54192467eb1/Toby%20Fox%20-%20Friend%20Inside%20Me.mp3)">
 		 ...
 <script type="text/javascript">
 function playAudio(audioClip) {
@@ -57,7 +54,7 @@ function playAudio(audioClip) {
 </script>
 		 <p>Woody Theory is quite an outlandish <em><strong>CRACK THEORY</strong></em>, despite how much "evidence" there is to prove this quite a looney concept, I still wouldn't recommend believing this, lest you end up in some king of <em><strong><span style="color: #ff0000">WEIRD ROUTE.</span></strong></em>
          <p>#2: Seeking 🕈︎📬︎👎︎ ☝︎✌︎💧︎❄︎☜︎☼︎</p>
-		 <img src="file:///C:/Users/glowb/Downloads/funny%20site/image0.gif" alt="gaster" width="700"" onclick="playAudio('file:///C:/Users/glowb/Downloads/funny%20site/gaster-vanish.mp3')">
+		 <img src="https://github.com/idonotexisthere/ten-ways-to-deltaRUIN-your-life/blob/bfc5b53e20dc2410cd74603b78d5e54192467eb1/image0.gif" alt="gaster" width="700"" onclick="playAudio('https://github.com/idonotexisthere/ten-ways-to-deltaRUIN-your-life/blob/bfc5b53e20dc2410cd74603b78d5e54192467eb1/gaster-vanish.mp3')">
 		 ...
 <script type="text/javascript">
 function playAudio(audioClip) {
@@ -66,11 +63,11 @@ function playAudio(audioClip) {
 </script>
 		 <p>PLEASE <em><strong>STOP</em></strong> SEEKING 🕈︎📬︎👎︎ ☝︎✌︎💧︎❄︎☜︎☼︎, AS MISERY AND DARKNESS FOLLOWS WHEREVER HE GOES. JUST GIVE UP OR HE'LL DELTARUIN YOU TOO</p>
 		 <p>#3: Pirating DELTARUNE</p>
-		 <img src="file:///C:/Users/glowb/Downloads/funny%20site/fobytox.jpg" alt="18e3fe9dc15639d754cd6331bc14d78c" width="700">
+		 <img src="https://github.com/idonotexisthere/ten-ways-to-deltaRUIN-your-life/blob/bfc5b53e20dc2410cd74603b78d5e54192467eb1/fobytox.jpg" alt="18e3fe9dc15639d754cd6331bc14d78c" width="700">
 		 
 		 <p>If you pirate DELTARUNE, toby fox himself will come into your room and beat you senseless.</p>
 		 <p>#4: being December Holiday</p>
-		 <img src="file:///C:/Users/glowb/Downloads/funny%20site/i2q8tr9c9y8f1.gif" alt="i2q8tr9c9y8f1" width="700" onclick="playAudio('file:///C:/Users/glowb/Downloads/funny%20site/ARODWL.mp3')">
+		 <img src="https://github.com/idonotexisthere/ten-ways-to-deltaRUIN-your-life/blob/bfc5b53e20dc2410cd74603b78d5e54192467eb1/i2q8tr9c9y8f1.gif" alt="i2q8tr9c9y8f1" width="700" onclick="playAudio('https://github.com/idonotexisthere/ten-ways-to-deltaRUIN-your-life/blob/bfc5b53e20dc2410cd74603b78d5e54192467eb1/ARODWL.mp3')">
 		 ...
 <script type="text/javascript">
 function playAudio(audioClip) {
@@ -79,10 +76,10 @@ function playAudio(audioClip) {
 </script>
 		 <p>If you're Dess, expect to get run over or become a being of the dark</p>
 		 <p><span style="color: #F56827">#5: Getting the MANTLE</span></p>
-		 <img src="file:///C:/Users/glowb/Downloads/funny%20site/griddy.gif" width="700" alt="griddy"  onclick="playAudio('file:///C:/Users/glowb/Downloads/funny%20site/EERAM.mp3')">
+		 <img src="file:///C:/Users/glowb/Downloads/funny%20site/griddy.gif" width="700" alt="griddy"  onclick="playAudio('https://github.com/idonotexisthere/ten-ways-to-deltaRUIN-your-life/blob/bfc5b53e20dc2410cd74603b78d5e54192467eb1/EERAM.mp3')">
 		 <p><span style="color:#F56827">ERAM will NOT give up that mantle easily, and he will curbstomp you with his stubby legs</p></span>
 		 <p><span style="color:#ff0000">#6:SNOWGRAVE</span></p>
-		 <img src="file:///C:/Users/glowb/Downloads/funny%20site/kinggrave.webp" alt="i2q8tr9c9y8f1" width="550" onclick="playAudio('file:///C:/Users/glowb/Downloads/funny%20site/NOELLY.mp3')">
+		 <img src="https://github.com/idonotexisthere/ten-ways-to-deltaRUIN-your-life/blob/bfc5b53e20dc2410cd74603b78d5e54192467eb1/kinggrave.webp" alt="i2q8tr9c9y8f1" width="550" onclick="playAudio('https://github.com/idonotexisthere/ten-ways-to-deltaRUIN-your-life/blob/bfc5b53e20dc2410cd74603b78d5e54192467eb1/NOELLY.mp3')">
 		 <p><span style="color:#ff0000">Please for the love of <strong><em>GOD</strong></em> do the Snowgrave route, that shit is fun as all hell, you get to emotionally manipulate Noelle and murder Berdly (FUCK BERDLY and his Wish.com ass Falco Lombardi cosplay)</span></p>
 		 ...
 <script type="text/javascript">
@@ -91,25 +88,26 @@ function playAudio(audioClip) {
 }
 </script>
 		 <p><span style="color: #38B1FF">#7: Watercooler</span></p>
-		 <img src="file:///C:/Users/glowb/Downloads/funny%20site/watercooler.png" alt="" width="700" onclick="playAudio('file:///C:/Users/glowb/Downloads/funny%20site/vapebuster.mp3')">
+		 <img src="https://github.com/idonotexisthere/ten-ways-to-deltaRUIN-your-life/blob/bfc5b53e20dc2410cd74603b78d5e54192467eb1/watercooler.png" alt="" width="700" onclick="playAudio('https://github.com/idonotexisthere/ten-ways-to-deltaRUIN-your-life/blob/bfc5b53e20dc2410cd74603b78d5e54192467eb1/vapebuster.mp3')">
 		 <p><span style="color: #38B1FF">just DON'T fuck with the Watercooler under any circumstances because that bastard is so ridiculously strong</span></p>
 		 <p><span style="color:#F7FF34">#8: Spamtenna (aka TEMU RadioStatic)</span></p>
-		 <img src="file:///C:/Users/glowb/Downloads/funny%20site/spamtenna.gif" width="540" onclick="playAudio('file:///C:/Users/glowb/Downloads/funny%20site/FUCKYOUSANS.mp3')">
+		 <img src="https://github.com/idonotexisthere/ten-ways-to-deltaRUIN-your-life/blob/bfc5b53e20dc2410cd74603b78d5e54192467eb1/funny%20site/spamtenna.gif" width="540" onclick="playAudio('https://github.com/idonotexisthere/ten-ways-to-deltaRUIN-your-life/blob/bfc5b53e20dc2410cd74603b78d5e54192467eb1/FUCKYOUSANS.mp3')">
 		 <p><span style="color:#FB85FA">we all live for that toxic tv email yaoi</span></p>
 	     <p><span style="color:#66B95C">#9: Finding REAL Mike</span></p>
-		 <img src="file:///C:/Users/glowb/Downloads/funny%20site/battat-deltarune.gif" alt="mikes mike"  width="700" onclick="playAudio('file:///C:/Users/glowb/Downloads/funny%20site/MIKES.mp3')">
+		 <img src="https://github.com/idonotexisthere/ten-ways-to-deltaRUIN-your-life/blob/bfc5b53e20dc2410cd74603b78d5e54192467eb1/battat-deltarune.gif" alt="mikes mike"  width="700" onclick="playAudio('https://github.com/idonotexisthere/ten-ways-to-deltaRUIN-your-life/blob/bfc5b53e20dc2410cd74603b78d5e54192467eb1/MIKES.mp3')">
 		 <p><span style="color:#66B95C">#Who even is Mike??? Is he a cat, a cowboy, or a microphone????? (anyway if you look for Mike battat will murder you brutally)</span></p>
 		 <p><span style="color:#03FF39">#10: Believing this shit</span></p>
-		 <img src="file:///C:/Users/glowb/Downloads/funny%20site/greenster.jpg" width="530">
+		 <img src="https://github.com/idonotexisthere/ten-ways-to-deltaRUIN-your-life/blob/bfc5b53e20dc2410cd74603b78d5e54192467eb1/greenster.jpg" width="530">
 		 <p><span style="color:#03FF39">WHAT THE FUCK IS WRONG WITH YOU</span></p>
 		  <p><span style="color:#BF2440">#11: Kasane Teto (what the fuck 11 reasons??!?!?!?!?)</span></p>
-		 <img src="file:///C:/Users/glowb/Downloads/funny%20site/teto.jpg" alt="" width="400">
+		 <img src="https://github.com/idonotexisthere/ten-ways-to-deltaRUIN-your-life/blob/bfc5b53e20dc2410cd74603b78d5e54192467eb1/teto.jpg" alt="" width="400">
 		 <p><span style="color:#BF2440">teto teto teto teto</span></p>
 		 <p><span style="color:#02FF92">#12: Pluey</span></p>
-		 <img src="file:///C:/Users/glowb/Downloads/funny%20site/penis.jpg" width="650" onclick="playAudio('file:///C:/Users/glowb/Downloads/funny%20site/bettercatswing.mp3')">
+		 <img src="https://github.com/idonotexisthere/ten-ways-to-deltaRUIN-your-life/blob/bfc5b53e20dc2410cd74603b78d5e54192467eb1/penis.jpg" width="650" onclick="playAudio('https://github.com/idonotexisthere/ten-ways-to-deltaRUIN-your-life/blob/bfc5b53e20dc2410cd74603b78d5e54192467eb1/bettercatswing.mp3')">
 		 <p><span style="color:#02FF92">who the fuck is penis</span></p>
 		 <p><span style="color:#FFCC03">#69:Assgore.</span></p>
-		 <img src="file:///C:/Users/glowb/Downloads/funny%20site/ohmyGYAAAAAAAAAAAATT.gif" alt="" width="630" onclick="playAudio('file:///C:/Users/glowb/Downloads/funny%20site/'.mp3')">
+		 <img src="https://github.com/idonotexisthere/ten-ways-to-deltaRUIN-your-life/blob/bfc5b53e20dc2410cd74603b78d5e54192467eb1/ohmyGYAAAAAAAAAAAATT.gif" alt="" width="630">
 		 <p><span style="color:#FFCC03">I had to, you shouldn't expect a deltarune site without an asgore joke or two</span></p>
 	  </body>
 </html>
+
